--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -12,11 +12,7 @@
       content="
       Hệ Thống Đào Tạo Trực Tuyến Từ Xa"
     />
-    <meta
-      name="description"
-      content="Hệ Thống Đào Tạo Trực Tuyến Từ Xa"
-
-    />
+    <meta name="description" content="Hệ Thống Đào Tạo Trực Tuyến Từ Xa" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
@@ -189,8 +185,8 @@
           min-height: 420px;
         "
       >
-      <img src="<%= context.config.publicPath +'logo.png'%>" alt="logo" width="256" />
-      <div class="page-loading-warp">
+        <img src="<%= context.config.publicPath +'logo.png'%>" alt="logo" width="256" />
+        <div class="page-loading-warp">
           <div class="ant-spin ant-spin-lg ant-spin-spinning">
             <span class="ant-spin-dot ant-spin-dot-spin"
               ><i class="ant-spin-dot-item"></i><i class="ant-spin-dot-item"></i
@@ -199,11 +195,7 @@
           </div>
         </div>
         <div style="display: flex; align-items: center; justify-content: center">
-          <img
-          src="/logo.png"
-          width="32"
-            style="margin-right: 8px"
-          />
+          <img src="/logo.png" width="32" style="margin-right: 8px" />
           Hệ Thống Đào Tạo Trực Tuyến Từ Xa
         </div>
       </div>
