--- a/src/global.less
+++ b/src/global.less
@@ -32,6 +32,11 @@ ol {
   list-style: none;
 }
 
+.filter-node{
+  color: #CC0D00
+}
+
+
 @media (max-width: @screen-xs) {
   .ant-table {
     width: 100%;
