feat: khai bao suc khoe user

--- a/src/pages/QuanLyTinTuc/styles.less
+++ b/src/pages/QuanLyTinTuc/styles.less
@@ -25,6 +25,7 @@
       .tin-tuc-card {
         height: 160px;
         img {
+          height: 120px;
           width: 120px;
         }
       }
@@ -37,6 +38,7 @@
         height: 160px;
         img {
           width: 80px;
+          height: 80px;
         }
         .tin-tuc-mo-ta {
           display: none;
