tien trinh hoc tap, dk tin chi

--- a/src/pages/QuanLyTinTuc/styles.less
+++ b/src/pages/QuanLyTinTuc/styles.less
@@ -17,6 +17,8 @@
         max-width: 480px;
         height: 400px;
         img {
+         object-fit: cover;
+          max-height: 380px;
           width: 100%;
         }
       }
