detail chuong trinh khung

--- a/src/pages/QuanLyTinTuc/styles.less
+++ b/src/pages/QuanLyTinTuc/styles.less
@@ -25,6 +25,7 @@
     }
     &:nth-child(n + 2):nth-child(-n + 2) {
       .tin-tuc-card {
+       
         height: 160px;
         img {
           height: 120px;
@@ -37,6 +38,7 @@
     }
     &:nth-child(n + 3) {
       .tin-tuc-card {
+       
         height: 160px;
         img {
           width: 80px;
@@ -50,6 +52,8 @@
   }
 
   .tin-tuc-card {
+    border: none;
+    border-bottom: 1px solid #f0f0f0;
     display: flex;
     .ant-card-body {
       display: flex;
