feat:phan quyen

--- a/src/global.less
+++ b/src/global.less
@@ -11,6 +11,14 @@ body,
 }
 
 
+.ant-input:hover {
+  border-color:#CC0D00
+}
+
+.ant-input:focus {
+  border-color:#CC0D00
+}
+
 .ant-layout {
   min-height: 100vh;
 }
