--- a/src/global.less
+++ b/src/global.less
@@ -10,13 +10,12 @@ body,
   filter: invert(80%);
 }
 
-
 .ant-input:hover {
-  border-color:#CC0D00
+  border-color: #cc0d00;
 }
 
 .ant-input:focus {
-  border-color:#CC0D00
+  border-color: #cc0d00;
 }
 
 .ant-layout {
@@ -58,10 +57,9 @@ ol {
   list-style: none;
 }
 
-.filter-node{
-  color: #CC0D00
+.filter-node {
+  color: #cc0d00;
 }
-
 
 @media (max-width: @screen-xs) {
   .ant-table {
