--- a/src/pages/BieuMau/KhaoSat/components/block.css
+++ b/src/pages/BieuMau/KhaoSat/components/block.css
@@ -1,5 +1,6 @@
 .block {
-  box-shadow: 0 1px 2px -2px rgb(0 0 0 / 16%), 0 3px 6px 0 rgb(0 0 0 / 12%), 0 5px 12px 4px rgb(0 0 0 / 9%);
+  box-shadow: 0 1px 2px -2px rgb(0 0 0 / 16%), 0 3px 6px 0 rgb(0 0 0 / 12%),
+    0 5px 12px 4px rgb(0 0 0 / 9%);
 }
 
 .deleteAnswer {
