--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -7,6 +7,7 @@
       name="keywords"
       content="Học viện, PTIT, Trực tuyến, từ xa, Hệ Thống Đào Tạo Trực Tuyến Từ Xa, đào tạo từ xa"
     />
+    <meta property="og:image" content="/metadata.png" />
     <meta
       name="description"
       content="
