--- a/src/global.less
+++ b/src/global.less
@@ -61,6 +61,14 @@ ol {
   color: #cc0d00;
 }
 
+.ant-collapse-content > .ant-collapse-content-box {
+  padding: 0px !important;
+}
+
+.ant-collapse > .ant-collapse-item > .ant-collapse-header {
+  padding: 0px !important;
+}
+
 @media (max-width: @screen-xs) {
   .ant-table {
     width: 100%;
