--- a/src/global.less
+++ b/src/global.less
@@ -25,6 +25,8 @@ body,
   left: unset;
 }
 
+
+
 .dynamic-delete-button {
   position: relative;
   top: 4px;
@@ -62,11 +64,11 @@ ol {
 }
 
 .ant-collapse-content > .ant-collapse-content-box {
-  padding: 0px !important;
+  padding: 0 !important;
 }
 
 .ant-collapse > .ant-collapse-item > .ant-collapse-header {
-  padding: 0px !important;
+  padding: 0 !important;
 }
 
 @media (max-width: @screen-xs) {
