--- a/src/pages/user/Login/index.less
+++ b/src/pages/user/Login/index.less
@@ -113,3 +113,35 @@
     margin-right: 6px;
   }
 }
+
+
+
+@media screen and (max-width: @screen-xl) {
+  .title {
+    font-size: 25px;
+  }
+}
+
+@media screen and (max-width: @screen-lg) {
+  .title {
+    font-size: 20px;
+  }
+}
+
+@media screen and (max-width: 899px) {
+  .title {
+    font-size: 19px;
+  }
+}
+
+@media screen and (max-width: 695px) {
+  .header {
+   margin-bottom: 30px;
+  }
+}
+
+@media screen and (max-width: 377px) {
+  .header {
+   margin-bottom: 80px;
+  }
+}
