--- a/src/global.less
+++ b/src/global.less
@@ -10,6 +10,10 @@ body,
   filter: invert(80%);
 }
 
+.ant-menu-item {
+  margin-top: 0 !important;
+}
+
 .ant-input:hover {
   border-color: #cc0d00;
 }
@@ -24,8 +28,6 @@ body,
 .ant-pro-sider.ant-layout-sider.ant-pro-sider-fixed {
   left: unset;
 }
-
-
 
 .dynamic-delete-button {
   position: relative;
