--- a/src/global.less
+++ b/src/global.less
@@ -6,6 +6,28 @@ body,
   height: 100%;
 }
 
+::-webkit-scrollbar {
+  width: 0;
+  height: 6px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+
+
 .colorWeak {
   filter: invert(80%);
 }
