--- a/src/global.less
+++ b/src/global.less
@@ -6,6 +6,10 @@ body,
   height: 100%;
 }
 
+.ant-drawer-header {
+  display: none !important
+}
+
 ::-webkit-scrollbar {
   width: 0;
   height: 6px;
