--- a/src/pages/LopHanhChinh/index.css
+++ b/src/pages/LopHanhChinh/index.css
@@ -1,4 +1,4 @@
-
 .thongtinchung:hover {
-  box-shadow: 0 1px 2px -2px rgb(0 0 0 / 16%), 0 3px 6px 0 rgb(0 0 0 / 12%), 0 5px 12px 4px rgb(0 0 0 / 9%);
+  box-shadow: 0 1px 2px -2px rgb(0 0 0 / 16%), 0 3px 6px 0 rgb(0 0 0 / 12%),
+    0 5px 12px 4px rgb(0 0 0 / 9%);
 }
