--- a/src/pages/QuanLyTinTuc/styles.less
+++ b/src/pages/QuanLyTinTuc/styles.less
@@ -19,7 +19,7 @@
         img {
           width: 100%;
           max-height: 380px;
-          object-fit: cover;
+          object-fit: scale-down;
         }
       }
     }
@@ -34,6 +34,11 @@
       .ant-col:not(:last-of-type) {
         padding-bottom: 8px;
       }
+      .tin-tuc-image-wrapper {
+        img {
+          object-fit: cover;
+        }
+      }
     }
     &:nth-child(n + 3) {
       .tin-tuc-card {
@@ -41,6 +46,7 @@
         img {
           width: 80px;
           height: 80px;
+          object-fit: cover;
         }
         .tin-tuc-mo-ta {
           display: none;
