--- a/src/pages/user/Login/index.less
+++ b/src/pages/user/Login/index.less
@@ -2,10 +2,11 @@
 
 .container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   height: 100vh;
   overflow: auto;
-  background: @layout-body-background;
+  background: #fff;
+  justify-content: center;
 }
 
 .lang {
@@ -19,20 +20,43 @@
 }
 
 .content {
-  flex: 1;
-  padding: 32px 0;
+ display: flex;
+ flex-direction: row;
+ align-content: center;
+ justify-content: center;
+ align-items: center;
+}
+
+.image {
+  width: 0px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  z-index: 1;
+  background-image: url('../../../assets/metadata.jpg');
 }
 
 @media (min-width: @screen-md-min) {
-  .container {
-    background-image: url('https://gw.alipayobjects.com/zos/rmsportal/TVYTbAXWheQpRcWDaDMu.svg');
-    background-repeat: no-repeat;
-    background-position: center 110px;
-    background-size: 100%;
+  .content {
+    width: 400px;
+  }
+  .image {
+    width: calc(100% - 400px);
+  }
+}
+
+@media (min-width: @screen-xxl-min) {
+  .content {
+    width: 500px;
   }
 
-  .content {
-    padding: 32px 0 24px;
+  .image {
+    width: calc(100% - 500px);
+  }
+
+  .main {
+    width: 500px;
   }
 }
 
@@ -71,8 +95,11 @@
 }
 
 .main {
-  width: 328px;
-  margin: 0 auto;
+  width: 400px;
+  min-height: 100vh;
+  display: block;
+  padding: 173px 40px 55px 40px;
+ 
   @media screen and (max-width: @screen-sm) {
     width: 95%;
     max-width: 328px;
