--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -5,20 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta
       name="keywords"
-      content="Học viện, PTIT, Trực tuyến, từ xa, Hệ Thống Đào Tạo Trực Tuyến Từ Xa, đào tạo từ xa"
+      content="Học viện, PTIT, Trực tuyến, Hệ Thống Xét Tuyển Trực Tuyến, đào tạo"
     />
     <meta property="og:image" content="/metadata.png" />
     <meta
       name="description"
       content="
-      Hệ Thống Đào Tạo Trực Tuyến Từ Xa"
+      Hệ Thống Xét Tuyển Trực Tuyến"
     />
-    <meta name="description" content="Hệ Thống Đào Tạo Trực Tuyến Từ Xa" />
+    <meta name="description" content="Hệ Thống Xét Tuyển Trực Tuyến" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
     />
-    <title>Hệ Thống Đào Tạo Trực Tuyến Từ Xa</title>
+    <title>Hệ Thống Xét Tuyển Trực Tuyến</title>
     <link rel="icon" href="<%= context.config.publicPath +'favicon.ico'%>" type="image/x-icon" />
   </head>
 
@@ -201,7 +201,7 @@
         </div>
         <div style="display: flex; align-items: center; justify-content: center">
           <img src="/logo.png" width="32" style="margin-right: 8px" />
-          Hệ Thống Đào Tạo Trực Tuyến Từ Xa
+          Hệ Thống Xét Tuyển Trực Tuyến
         </div>
       </div>
     </div>
