--- a/src/global.less
+++ b/src/global.less
@@ -4,6 +4,7 @@ html,
 body,
 #root {
   height: 100%;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
 
 .ant-drawer-header {
