--- a/src/global.less
+++ b/src/global.less
@@ -4,8 +4,9 @@ html,
 body,
 #root {
   height: 100%;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+  font-family: Arial, Helvetica, sans-serif;
 }
+
 
 .ant-drawer-header {
   display: none !important;
