--- a/src/global.less
+++ b/src/global.less
@@ -8,6 +8,11 @@ body,
 }
 
 
+.ant-pro-global-footer {
+  margin-top: 0px;
+  margin-bottom: 8px;
+}
+
 .ant-drawer-header {
   display: none !important;
 }
