--- a/src/pages/user/Login/index.less
+++ b/src/pages/user/Login/index.less
@@ -56,7 +56,7 @@
   display: block;
   width: 400px;
   min-height: 100vh;
-  padding: 40px 40px 0px 40px;
+  padding: 40px 40px 0 40px;
   position: relative;
   @media screen and (max-width: @screen-sm) {
     width: 95%;
