--- a/src/pages/user/register/index.less
+++ b/src/pages/user/register/index.less
@@ -5,7 +5,7 @@
   display: block;
   width: 400px;
   min-height: 100vh;
-  padding: 10px 40px 0px 40px;
+  padding: 10px 40px 0 40px;
   position: relative;
   @media screen and (max-width: @screen-sm) {
     width: 95%;
