--- a/src/pages/user/Login/index.less
+++ b/src/pages/user/Login/index.less
@@ -39,25 +39,24 @@
 }
 
 .iconhuongdan {
-  font-size: 25px;
-  color: #CC0D00 !important;
   margin-right: 16px;
-  box-shadow: 0 1px 2px -2px rgb(0, 0, 0, 0.1), 0 3px 6px 0 rgb(0, 0, 0, 0.05),
-  0 5px 12px 4px #ccc !important
+  color: #cc0d00 !important;
+  font-size: 25px;
+  box-shadow: 0 1px 2px -2px rgb(0, 0, 0, 0.1), 0 3px 6px 0 rgb(0, 0, 0, 0.05), 0 5px 12px 4px #ccc !important;
 }
 
 .containericonhuongdan {
   position: absolute;
-  right: 8px;
   top: 8px;
+  right: 8px;
 }
 
 .main {
+  position: relative;
   display: block;
   width: 400px;
   min-height: 100vh;
   padding: 40px 40px 0 40px;
-  position: relative;
   @media screen and (max-width: @screen-sm) {
     width: 95%;
     max-width: 450px;
@@ -108,8 +107,6 @@
     // display: none;
   }
 
-  
-
   .main {
     padding-top: 70px;
   }
@@ -130,7 +127,6 @@
   }
 }
 
-
 .top {
   text-align: center;
 }
@@ -142,8 +138,6 @@
     text-decoration: none;
   }
 }
-
-
 
 .logo {
   height: 44px;
@@ -239,10 +233,8 @@
 }
 
 .titleSystemName {
-  text-align: center;
-  line-height: 40px;
+  color: #cc0d00;
   font-size: 33px;
-  color: #CC0D00;
+  line-height: 40px;
+  text-align: center;
 }
-
-
