--- a/src/global.less
+++ b/src/global.less
@@ -12,6 +12,10 @@ body,
   margin-bottom: 8px;
 }
 
+.ant-pro-basicLayout-content {
+  margin: 12px !important;
+}
+
 .ant-drawer-header {
   display: none !important;
 }
@@ -117,6 +121,10 @@ ol {
         }
       }
     }
+  }
+
+  .ant-pro-basicLayout-content {
+    margin: 4px !important;
   }
 }
 
