--- a/src/global.less
+++ b/src/global.less
@@ -40,6 +40,17 @@ body,
   background: #555;
 }
 
+// .ant-steps-item-description {
+//   width: 220px;
+// }
+
+
+// .ant-steps-item-content{
+//   display: flex !important;
+//   flex-direction: column;
+//   align-items: center;
+// }
+
 .colorWeak {
   filter: invert(80%);
 }
