Table Base: Add custom filters

--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -1,6 +1,5 @@
 @import '~antd/es/style/themes/default.less';
-
-@primary-color: #007eb9;
+@import '_variable.less';
 
 html,
 body,
@@ -152,23 +151,6 @@ body,
 }
 .ant-pro-sider.ant-layout-sider.ant-pro-sider-fixed {
   left: unset;
-}
-
-.table-base {
-  .total {
-    float: right;
-    margin: 0 0px 8px 8px;
-
-    input {
-      width: 85px;
-      margin-left: 10px;
-      color: @primary-color;
-      font-weight: 700;
-      font-size: 1.1rem;
-      line-height: 1.2;
-      text-align: center;
-    }
-  }
 }
 
 .dynamic-delete-button {
