--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -27,7 +27,7 @@ body,
 
 .ant-menu-light.ant-pro-sider-menu {
   padding: 24px 12px;
-  font-weight: 500;
+  font-weight: 600;
 
   .ant-menu-item {
     height: auto;
@@ -95,8 +95,42 @@ body,
   }
 }
 
-.ant-descriptions-item-label {
-  font-weight: 500 !important;
+a {
+  position: relative;
+
+  &::after {
+    position: absolute;
+    bottom: -2px;
+    left: 50%;
+    width: 0;
+    height: 1px;
+    background-color: @primary-color;
+    transform: translateX(-50%);
+    opacity: 0;
+    transition: 0.3s;
+    content: '';
+  }
+
+  &:hover::after {
+    width: 100%;
+    opacity: 1;
+    transition: 0.3s;
+  }
+}
+
+.ant-descriptions-item-label,
+.fw500 {
+  font-weight: 600 !important;
+}
+
+.ant-checkbox {
+  .ant-checkbox-inner {
+    border-radius: 2px;
+  }
+}
+
+.ant-tabs-tab.ant-tabs-tab-active {
+  font-weight: 600;
 }
 
 .login-footer .ant-layout-footer {
@@ -272,6 +306,17 @@ ol {
   .ant-typography {
     margin-bottom: 0 !important;
   }
+}
+
+.ant-table-thead {
+  .ant-table-cell {
+    font-weight: 600;
+    text-align: center !important;
+  }
+}
+
+.ant-table-small .ant-table-cell {
+  padding: 8px !important;
 }
 
 .li-hinh-thuc {
