Update global CSS

--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -137,6 +137,13 @@ a {
   background-color: @primary-color;
 }
 
+.form-footer {
+  display: flex;
+  gap: 8px;
+  justify-content: center;
+  margin-top: 12px;
+}
+
 .ant-layout-content {
   margin: 18px !important;
 
@@ -237,6 +244,16 @@ ol {
 
 .filter-node {
   color: @primary-color;
+}
+
+// style select
+
+.width-select-custom {
+  width: calc(100% - 40px) !important;
+}
+
+.fullWidth {
+  width: 100%;
 }
 
 // .ant-collapse-content > .ant-collapse-content-box {
