Table Base: add fullScreen option

--- a/src/components/Table/style.less
+++ b/src/components/Table/style.less
@@ -71,3 +71,17 @@
   gap: 5px;
   padding: 8px;
 }
+
+.ant-modal.modal-ho-so-nhan-su {
+  @media (min-width: @screen-md) {
+    top: 0;
+    width: 100vw !important;
+    height: 100vh;
+    margin: 0;
+    .ant-modal-content {
+      width: 100vw;
+      height: 100vh;
+      border-radius: 0px;
+    }
+  }
+}
