Update Keycloak VWA

--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -29,7 +29,8 @@ body,
   padding: 24px 12px;
   font-weight: 600;
 
-  .ant-menu-item {
+  .ant-menu-item,
+  .ant-menu-submenu-title {
     height: auto;
     min-height: 40px;
     padding: 5px 12px;
