--- a/src/components/Table/style.less
+++ b/src/components/Table/style.less
@@ -66,6 +66,18 @@
   }
 }
 
+.ant-modal.modal-ho-so-nhan-su {
+  top: 0;
+  width: 100vw !important;
+  height: 100vh;
+  margin: 0;
+  .ant-modal-content {
+    width: 100vw;
+    height: 100vh;
+    border-radius: 0px;
+  }
+}
+
 .column-search-box {
   display: flex;
   gap: 5px;
