Danh sách Module, sửa CSS

--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -257,6 +257,14 @@ ol {
   width: 100%;
 }
 
+.ant-divider-horizontal.ant-divider-with-text-left::before {
+  width: 0px;
+}
+
+.ant-divider-inner-text {
+  padding: 0px;
+}
+
 // .ant-collapse-content > .ant-collapse-content-box {
 //   padding: 0 !important;
 // }
@@ -318,7 +326,7 @@ ol {
 }
 
 .ant-table-cell {
-  padding: 12px !important;
+  padding: 8px !important;
 
   p,
   .ant-typography {
@@ -334,7 +342,7 @@ ol {
 }
 
 .ant-table-small .ant-table-cell {
-  padding: 8px !important;
+  padding: 5px !important;
 }
 
 .li-hinh-thuc {
