--- a/src/components/RightContent/index.less
+++ b/src/components/RightContent/index.less
@@ -1,6 +1,6 @@
 @import '~antd/es/style/themes/default.less';
 
-@pro-header-hover-bg: rgba(0, 0, 0, 0.025);
+@pro-header-hover-bg: rgba(0, 0, 0, 0.05);
 
 .menu {
   :global(.anticon) {
@@ -13,33 +13,49 @@
 
 .right {
   display: flex;
+  gap: 0px;
+  align-items: center;
   float: right;
-  height: 48px;
   margin-left: auto;
   overflow: hidden;
+
+  :global(.anticon) {
+    display: flex;
+    align-items: center;
+    height: 48px;
+    padding: 0 8px;
+    font-size: 18px;
+
+    &:hover {
+      background: @pro-header-hover-bg;
+    }
+  }
+
   .action {
     display: flex;
     align-items: center;
     height: 48px;
-    padding: 0 12px;
+    padding: 0 8px;
     cursor: pointer;
     transition: all 0.3s;
+
     > span {
       vertical-align: middle;
     }
+
     &:hover {
       background: @pro-header-hover-bg;
     }
+
     &:global(.opened) {
       background: @pro-header-hover-bg;
     }
   }
-  .search {
-    padding: 0 12px;
-    &:hover {
-      background: transparent;
-    }
+
+  .name {
+    color: #ffffff;
   }
+
   .account {
     .avatar {
       margin-right: 8px;
