--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -253,21 +253,27 @@ ol {
   width: calc(100% - 40px) !important;
 }
 
-.drawer-full {
-  .ant-drawer-content-wrapper {
-    width: 100% !important;
+@media (min-width: @screen-md) {
+  .drawer-full {
+    .ant-drawer-content-wrapper {
+      width: 100% !important;
+    }
   }
-}
 
-.modal-full {
-  top: 0;
-  width: 100vw !important;
-  max-width: 100vw;
-  height: 100vh;
-  overflow: hidden;
+  .modal-full {
+    top: 0;
+    width: 100vw !important;
+    max-width: 100vw;
+    height: 100vh;
+    overflow: hidden;
 
-  > .ant-modal-content {
-    border-radius: 0;
+    > .ant-modal-content {
+      border-radius: 0;
+
+      > .ant-modal-body {
+        height: 100vh;
+      }
+    }
   }
 }
 
