--- a/src/components/Upload/UploadAvatar.less
+++ b/src/components/Upload/UploadAvatar.less
@@ -1,4 +1,8 @@
-.avatar-uploader > .ant-upload {
-  width: 128px;
-  height: 128px;
+.avatar-uploader {
+  text-align: center;
+
+  > .ant-upload {
+    width: 140px;
+    height: 180px;
+  }
 }
