Update CSS side menu

--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -105,6 +105,33 @@ body,
   }
 }
 
+.ant-menu-dark.ant-pro-sider-menu {
+  .ant-menu-item,
+  .ant-menu-submenu-title {
+    height: auto;
+    min-height: 36px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    line-height: 1.5;
+    border-radius: 2px;
+
+    &::after {
+      border: none;
+    }
+  }
+
+  .ant-pro-menu-item {
+    white-space: break-spaces;
+  }
+}
+
+.ant-pro-sider-menu.ant-menu-inline-collapsed {
+  .ant-menu-item,
+  .ant-menu-submenu-title {
+    height: 40px;
+  }
+}
+
 a {
   position: relative;
 
