Login Swap token & Modules view

--- a/src/components/RightContent/ModuleSwitch/style.less
+++ b/src/components/RightContent/ModuleSwitch/style.less
@@ -5,10 +5,11 @@
   padding: 12px;
 
   .module-header {
-    margin-bottom: 12px;
-    font-weight: 600;
+    margin: 5px 0 12px 0;
+    font-weight: 700;
     font-size: 16px;
     text-align: center;
+    text-transform: uppercase;
   }
 
   .module-item {
@@ -36,8 +37,9 @@
     }
 
     .module-name {
-      margin-top: 12px;
-      line-height: 1;
+      display: block;
+      height: 35px;
+      line-height: 1.2;
     }
   }
 }
