--- a/src/components/RightContent/ModuleSwitch/style.less
+++ b/src/components/RightContent/ModuleSwitch/style.less
@@ -23,22 +23,34 @@
       background-color: rgba(0, 0, 0, 0.05);
       transition: 0.3s;
 
-      .anticon {
+      .anticon,
+      img {
         transform: scale(1.2);
       }
     }
 
     .anticon {
-      display: block;
-      margin: 18px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 56px;
+      margin: 12px;
+
       color: #bbb;
-      font-size: 32px;
+      font-size: 44px;
+      transition: 0.3s;
+    }
+
+    img {
+      height: 60px;
+      margin: 10px;
       transition: 0.3s;
     }
 
     .module-name {
       display: block;
       height: 35px;
+      font-weight: 600;
       line-height: 1.2;
     }
   }
