--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -4,13 +4,12 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="keywords" content="Học viện, PTIT, Trực tuyến, Hệ Thống Đào Tạo Trực Tuyến, đào tạo" />
+  <meta name="keywords"
+    content="Học viện, VWA, Trực tuyến, HỆ THỐNG PHẦN MỀM CHỈ ĐẠO, ĐIỀU HÀNH - HỌC VIỆN PHỤ NỮ VIỆT NAM, đào tạo" />
   <meta property="og:image" content="/metadata.png" />
-  <meta name="description" content="
-      Hệ Thống Đào Tạo Trực Tuyến" />
-  <meta name="description" content="Hệ Thống Đào Tạo Trực Tuyến" />
+  <meta name="description" content="HỆ THỐNG PHẦN MỀM CHỈ ĐẠO, ĐIỀU HÀNH - HỌC VIỆN PHỤ NỮ VIỆT NAM" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-  <title>Hệ Thống Đào Tạo Trực Tuyến</title>
+  <title>HỆ THỐNG PHẦN MỀM CHỈ ĐẠO, ĐIỀU HÀNH - HỌC VIỆN PHỤ NỮ VIỆT NAM</title>
   <link rel="icon" href="<%= context.config.publicPath +'favicon.ico'%>" type="image/x-icon" />
 
   <!-- <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
@@ -67,52 +66,11 @@
         padding: 0;
       }
 
-      #root {
-        background-repeat: no-repeat;
-        background-size: 100% auto;
-      }
-
-      #root {
-        background-repeat: no-repeat;
-        background-size: 100% auto;
-      }
-
       .page-loading-warp {
         display: flex;
         align-items: center;
         justify-content: center;
         padding: 98px;
-      }
-
-      .page-loading-warp {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding: 98px;
-      }
-
-      .ant-spin {
-        position: absolute;
-        display: none;
-        -webkit-box-sizing: border-box;
-        box-sizing: border-box;
-        margin: 0;
-        padding: 0;
-        color: rgba(0, 0, 0, 0.65);
-        color: #007EB9;
-        font-size: 14px;
-        font-variant: tabular-nums;
-        line-height: 1.5;
-        text-align: center;
-        list-style: none;
-        opacity: 0;
-        -webkit-transition: -webkit-transform 0.3s cubic-bezier(0.78, 0.14, 0.15, 0.86);
-        transition: -webkit-transform 0.3s cubic-bezier(0.78, 0.14, 0.15, 0.86);
-        transition: transform 0.3s cubic-bezier(0.78, 0.14, 0.15, 0.86);
-        transition: transform 0.3s cubic-bezier(0.78, 0.14, 0.15, 0.86),
-          -webkit-transform 0.3s cubic-bezier(0.78, 0.14, 0.15, 0.86);
-        -webkit-font-feature-settings: 'tnum';
-        font-feature-settings: 'tnum';
       }
 
       .ant-spin {
@@ -145,20 +103,6 @@
         opacity: 1;
       }
 
-      .ant-spin-spinning {
-        position: static;
-        display: inline-block;
-        opacity: 1;
-      }
-
-      .ant-spin-dot {
-        position: relative;
-        display: inline-block;
-        width: 20px;
-        height: 20px;
-        font-size: 20px;
-      }
-
       .ant-spin-dot {
         position: relative;
         display: inline-block;
@@ -185,39 +129,9 @@
         animation: antSpinMove 1s infinite linear alternate;
       }
 
-      .ant-spin-dot-item {
-        position: absolute;
-        display: block;
-        width: 9px;
-        height: 9px;
-        background-color: #007EB9;
-        border-radius: 100%;
-        -webkit-transform: scale(0.75);
-        -ms-transform: scale(0.75);
-        transform: scale(0.75);
-        -webkit-transform-origin: 50% 50%;
-        -ms-transform-origin: 50% 50%;
-        transform-origin: 50% 50%;
-        opacity: 0.3;
-        -webkit-animation: antspinmove 1s infinite linear alternate;
-        animation: antSpinMove 1s infinite linear alternate;
-      }
-
       .ant-spin-dot-item:nth-child(1) {
         top: 0;
         left: 0;
-      }
-
-      .ant-spin-dot-item:nth-child(1) {
-        top: 0;
-        left: 0;
-      }
-
-      .ant-spin-dot-item:nth-child(2) {
-        top: 0;
-        right: 0;
-        -webkit-animation-delay: 0.4s;
-        animation-delay: 0.4s;
       }
 
       .ant-spin-dot-item:nth-child(2) {
@@ -232,20 +146,6 @@
         bottom: 0;
         -webkit-animation-delay: 0.8s;
         animation-delay: 0.8s;
-      }
-
-      .ant-spin-dot-item:nth-child(3) {
-        right: 0;
-        bottom: 0;
-        -webkit-animation-delay: 0.8s;
-        animation-delay: 0.8s;
-      }
-
-      .ant-spin-dot-item:nth-child(4) {
-        bottom: 0;
-        left: 0;
-        -webkit-animation-delay: 1.2s;
-        animation-delay: 1.2s;
       }
 
       .ant-spin-dot-item:nth-child(4) {
@@ -263,20 +163,6 @@
         animation: antRotate 1.2s infinite linear;
       }
 
-      .ant-spin-dot-spin {
-        -webkit-transform: rotate(45deg);
-        -ms-transform: rotate(45deg);
-        transform: rotate(45deg);
-        -webkit-animation: antrotate 1.2s infinite linear;
-        animation: antRotate 1.2s infinite linear;
-      }
-
-      .ant-spin-lg .ant-spin-dot {
-        width: 32px;
-        height: 32px;
-        font-size: 32px;
-      }
-
       .ant-spin-lg .ant-spin-dot {
         width: 32px;
         height: 32px;
@@ -286,19 +172,6 @@
       .ant-spin-lg .ant-spin-dot i {
         width: 14px;
         height: 14px;
-      }
-
-      .ant-spin-lg .ant-spin-dot i {
-        width: 14px;
-        height: 14px;
-      }
-
-      @media all and (-ms-high-contrast: none),
-      (-ms-high-contrast: active) {
-        .ant-spin-blur {
-          background: #fff;
-          opacity: 0.5;
-        }
       }
 
       @media all and (-ms-high-contrast: none),
@@ -315,28 +188,9 @@
         }
       }
 
-      @-webkit-keyframes antSpinMove {
-        to {
-          opacity: 1;
-        }
-      }
-
       @keyframes antSpinMove {
         to {
           opacity: 1;
-        }
-      }
-
-      @keyframes antSpinMove {
-        to {
-          opacity: 1;
-        }
-      }
-
-      @-webkit-keyframes antRotate {
-        to {
-          -webkit-transform: rotate(405deg);
-          transform: rotate(405deg);
         }
       }
 
@@ -353,21 +207,46 @@
           transform: rotate(405deg);
         }
       }
+
+      .container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+        min-height: 100vh;
+        padding: 10px;
+      }
+
+      .container img {
+        width: 500px;
+        max-width: 100%;
+      }
+
+      .container h2 {
+        font-weight: 700;
+        font-size: 18px;
+        color: #007EB9;
+        text-align: center;
+      }
     </style>
 
-    <div style=" display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100%;
-      min-height: 420px; ">
-      <img src=" <%=context.config.publicPath +'logo.png'%>" alt="logo" width="256" />
+    <div class="container">
+      <img src="<%=context.config.publicPath +'logo-full.svg'%>" alt="logo" />
       <div class="page-loading-warp">
         <div class="ant-spin ant-spin-lg ant-spin-spinning">
-          <span class="ant-spin-dot ant-spin-dot-spin"><i class="ant-spin-dot-item"></i><i
-              class="ant-spin-dot-item"></i><i class="ant-spin-dot-item"></i><i class="ant-spin-dot-item"></i></span>
+          <span class="ant-spin-dot ant-spin-dot-spin">
+            <i class="ant-spin-dot-item"></i>
+            <i class="ant-spin-dot-item"></i>
+            <i class="ant-spin-dot-item"></i>
+            <i class="ant-spin-dot-item"></i>
+          </span>
         </div>
       </div>
-      <div style="display: flex; align-items: center; justify-content: center">
-        <img src="/logo.png" width="32" style="margin-right: 8px" />
-        Hệ Thống Đào Tạo Trực Tuyến
-      </div>
+
+      <h2>
+        HỆ THỐNG PHẦN MỀM CHỈ ĐẠO, ĐIỀU HÀNH - HỌC VIỆN PHỤ NỮ VIỆT NAM
+      </h2>
     </div>
     <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit" async defer></script>
   </div>
