Update CSS Table

--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -433,6 +433,7 @@ ol {
 }
 
 .ant-table-cell {
+  height: 48px;
   padding: 8px !important;
 
   p,
@@ -449,7 +450,8 @@ ol {
 }
 
 .ant-table-small .ant-table-cell {
-  padding: 5px !important;
+  height: 36px;
+  padding: 3px 5px !important;
 }
 
 .li-hinh-thuc {
