--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -108,11 +108,11 @@ body,
 .ant-menu-dark.ant-pro-sider-menu {
   .ant-menu-item,
   .ant-menu-submenu-title {
-    height: auto;
+    height: auto !important;
     min-height: 36px;
     padding-top: 5px;
     padding-bottom: 5px;
-    line-height: 1.5;
+    line-height: 1.5 !important;
     border-radius: 2px;
 
     &::after {
