--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -128,7 +128,7 @@ body,
 .ant-pro-sider-menu.ant-menu-inline-collapsed {
   .ant-menu-item,
   .ant-menu-submenu-title {
-    height: 40px;
+    height: 40px !important;
   }
 }
 
