Login: Update CSS

--- a/src/pages/user/Login/index.less
+++ b/src/pages/user/Login/index.less
@@ -3,8 +3,8 @@
 .container {
   display: flex;
   flex-direction: column;
-  height: 100vh;
-  overflow: auto;
+  min-height: 100vh;
+  overflow: hidden;
   background-color: @primary-color;
 }
 
