--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -167,6 +167,10 @@ a {
   }
 }
 
+.ant-tag {
+  margin-right: 0 !important;
+}
+
 .login-footer .ant-layout-footer {
   background-color: @primary-color;
 }
