Thông báo: Hiển thị chung

--- a/src/components/RightContent/NoticeIcon/index.less
+++ b/src/components/RightContent/NoticeIcon/index.less
@@ -17,6 +17,12 @@
 
 .badge {
   font-size: 16px;
+
+  :global(.ant-badge-count) {
+    top: 10px;
+    right: 5px;
+    padding: 0;
+  }
 }
 
 .tabs {
