--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -167,8 +167,15 @@ a {
   }
 }
 
-.ant-tag {
-  margin-right: 0 !important;
+.ant-tag-checkable {
+  padding: 2px 7px;
+  font-size: 14px;
+  border: 1px solid #f0f0f0;
+  border-radius: @border-radius;
+
+  .ant-tag-checkable-checked {
+    border: none;
+  }
 }
 
 .login-footer .ant-layout-footer {
