Upload: add upload Avatar small

--- a/src/components/Upload/UploadAvatar.less
+++ b/src/components/Upload/UploadAvatar.less
@@ -5,6 +5,7 @@
   .ant-upload-select-picture-card {
     width: 140px !important;
     height: 180px !important;
+    margin-right: 0;
   }
 
   .ant-upload-list-picture-card-container {
@@ -25,6 +26,20 @@
       .ant-upload-list-item-image {
         object-fit: cover;
       }
+    }
+  }
+}
+
+.avatar-small {
+  .ant-upload-select-picture-card {
+    width: 120px !important;
+    height: 120px !important;
+  }
+
+  .ant-upload-list-picture-card-container {
+    .ant-upload-list-item-list-type-picture-card {
+      width: 120px;
+      height: 120px;
     }
   }
 }
