--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -171,14 +171,16 @@ a {
   margin-right: 0 !important;
 }
 
-.ant-tag-checkable {
-  padding: 2px 7px;
-  font-size: 14px;
-  border: 1px solid #f0f0f0;
-  border-radius: @border-radius;
+.ant-form {
+  .ant-tag-checkable {
+    padding: 2px 7px;
+    font-size: 14px;
+    border: 1px solid #f0f0f0;
+    border-radius: @border-radius;
 
-  .ant-tag-checkable-checked {
-    border: none;
+    .ant-tag-checkable-checked {
+      border: none;
+    }
   }
 }
 
