OneSignal: 🎉OneSignal work well

--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -12,16 +12,6 @@
   <title>HỆ THỐNG PHẦN MỀM CHỈ ĐẠO, ĐIỀU HÀNH - HỌC VIỆN PHỤ NỮ VIỆT NAM</title>
   <link rel="icon" href="<%= context.config.publicPath +'favicon.ico'%>" type="image/x-icon" />
 
-  <!-- <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
-    <script>
-      window.OneSignal = window.OneSignal || [];
-      OneSignal.push(function () {
-        OneSignal.init({
-          // appId: 'b54b6229-f9fe-4aa1-8334-1ab87945e09e',    // in dev
-          appId: '72496a32-ad38-42eb-bb70-ef67c5800f24',    // in prod
-        });
-      });
-    </script> -->
 </head>
 
 <body>
@@ -46,10 +36,6 @@
   </script> -->
 
 
-  <!-- Your Chat Plugin code -->
-  <div class="fb-customerchat" attribution="setup_tool" page_id="101402285211797"
-    logged_in_greeting="Xin chào, chúng tôi có thể giúp gì cho bạn?"
-    logged_out_greeting="Xin chào, chúng tôi có thể giúp gì cho bạn?"></div>
   <!-- Your Chat Plugin code -->
   <div class="fb-customerchat" attribution="setup_tool" page_id="101402285211797"
     logged_in_greeting="Xin chào, chúng tôi có thể giúp gì cho bạn?"
@@ -248,7 +234,7 @@
         HỆ THỐNG PHẦN MỀM CHỈ ĐẠO, ĐIỀU HÀNH - HỌC VIỆN PHỤ NỮ VIỆT NAM
       </h2>
     </div>
-    <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit" async defer></script>
+    <!-- <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit" async defer></script> -->
   </div>
 </body>
 
