--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -484,8 +484,28 @@ canvas {
   }
 }
 
+.bg-primary-selected {
+  background-color: @primary-1;
+}
+
 .text-primary {
   color: @primary-color;
+}
+
+.text-info {
+  color: @info-color;
+}
+
+.text-success {
+  color: @success-color;
+}
+
+.text-warning {
+  color: @warning-color;
+}
+
+.text-error {
+  color: @error-color;
 }
 
 @media (max-width: @screen-xs) {
