--- a/src/components/Table/style.less
+++ b/src/components/Table/style.less
@@ -104,12 +104,13 @@
 }
 
 .row-dragging {
+  z-index: 1001;
   background: #fafafa;
   border: 1px solid #ccc;
 }
 
 .row-dragging td {
-  padding: 16px;
+  padding: 3px 12px !important;
 }
 
 .row-dragging .drag-visible {
